--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="./app.js" defer></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="app.js" defer></script>
     <title>❤️Hiyori❤️</title>
 </head>
 <body>
