--- a/love/love.html
+++ b/love/love.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="love.css">
-    <title>❤️12-01❤️</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -38,7 +38,7 @@
                 <div class="handsCatImgInput">
                     <img src="../image/handsCat.png" alt="">
                 </div>
-                <input type="text" id="inputField" placeholder="名前..." readonly>
+                <input type="text" id="inputField" placeholder="Nhập tên..." readonly>
             </div>
             <div class="buttonLove">
                 <div class="cricleBtn"></div>
@@ -202,7 +202,7 @@
                 document.querySelector(".button").style.height = "30px"
             },3500)
             setTimeout(()=>{
-                document.querySelector(".button").innerHTML = "Click"
+                document.querySelector(".button").innerHTML = "Nhận thư"
             },4000)
         }
     }
@@ -215,7 +215,7 @@
     // .textLetter text h2
     let indexText = 0;
     let textLetter = document.querySelector('.textLetter h2');
-    const textLetterH2 = "ひよりちゃんへ!";
+    const textLetterH2 = "Gửi em!";
     let timoutTextLetter;
 
     function textCharLetter(){
@@ -244,7 +244,7 @@
     let indexTextContent = 0;
     let textLetterContent = document.querySelector('.contentLetter');
     // thay đổi lời chúc
-    const textLetterP = "いつもそばに居てくれて、ありがとう！ひよりちゃんの優しさで俺の心を癒せたよ！これからもお互い頑張りましょうね！何かがあれば、一緒に解決しよーね！悲しみは半分＜ー＞喜びは倍に！愛してるよ❤️";
+    const textLetterP = "1 tuần có 7 ngày. 1 ngày có 24 giờ. 1 giờ có 60 phút. 1 phút có 60 giây. Không có một ngày hoặc giờ mà tôi không nhớ bạn. Không có giây phút nào mà anh không nghĩ đến cậu. Tâm hồn và trái tim tôi tràn ngập bạn. Nhớ và yêu em nhiều lắm.";
     let timoutTextLetterContent;
     function textCharLetterContent(){
         if (indexTextContent < textLetterP.length) {
