--- a/love/love.html
+++ b/love/love.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="love.css">
-    <title>Document</title>
+    <title>❤️12-01❤️</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -38,7 +38,7 @@
                 <div class="handsCatImgInput">
                     <img src="../image/handsCat.png" alt="">
                 </div>
-                <input type="text" id="inputField" placeholder="Nhập tên..." readonly>
+                <input type="text" id="inputField" placeholder="名前..." readonly>
             </div>
             <div class="buttonLove">
                 <div class="cricleBtn"></div>
@@ -171,7 +171,7 @@
     }
 
     const inputField = document.getElementById('inputField');
-    const textToType = "Ngân Hà"; // thay đổi tên người yêu của bạn
+    const textToType = "❤️緋依❤️"; // thay đổi tên người yêu của bạn
     const typingSpeed = 100; // milliseconds per character
 
     let charIndex = 0;
@@ -202,7 +202,7 @@
                 document.querySelector(".button").style.height = "30px"
             },3500)
             setTimeout(()=>{
-                document.querySelector(".button").innerHTML = "Nhận thư"
+                document.querySelector(".button").innerHTML = "Click Here"
             },4000)
         }
     }
@@ -215,7 +215,7 @@
     // .textLetter text h2
     let indexText = 0;
     let textLetter = document.querySelector('.textLetter h2');
-    const textLetterH2 = "Gửi em!";
+    const textLetterH2 = "ひよりちゃんへ!";
     let timoutTextLetter;
 
     function textCharLetter(){
@@ -244,7 +244,7 @@
     let indexTextContent = 0;
     let textLetterContent = document.querySelector('.contentLetter');
     // thay đổi lời chúc
-    const textLetterP = "1 tuần có 7 ngày. 1 ngày có 24 giờ. 1 giờ có 60 phút. 1 phút có 60 giây. Không có một ngày hoặc giờ mà tôi không nhớ bạn. Không có giây phút nào mà anh không nghĩ đến cậu. Tâm hồn và trái tim tôi tràn ngập bạn. Nhớ và yêu em nhiều lắm.";
+    const textLetterP = "いつもそばに居てくれて、ありがとう！これからも一緒に頑張ろうね！将来何があっても、一緒に乗り越えよーね！喜びは２倍悲しみは半分！ひよりちゃんのこと愛してるよ❤️絶対大事にします❤️";
     let timoutTextLetterContent;
     function textCharLetterContent(){
         if (indexTextContent < textLetterP.length) {
